# NTU-BIME_Mechanism_Firmware

./: .gitignore  Makefile  README.md
main/: IrSensors.h  Makefile  My_Sensor.h  ObstacleDetector.h  RouteDetector.h  Setting.h  SharpIR.h  WheelControl.h  Wheel_Control.h  main.ino
other/: IR_Test.ino
other/USART/: Makefile  USART.c
src/: ADConverter.cpp  ADConverter.hpp  CMakeLists.txt  IOPin.hpp  Makefile  Millis.cpp  Millis.hpp  ObstacleDetector.hpp  README.md  Registers.hpp  RouteDetector.hpp  Sensors.cpp  Sensors.hpp  SevenSegment.hpp  Usart.cpp  Usart.hpp  main.cpp  usart.cpp
src/app-old/: Sensors.cpp  SevenSegment.cpp
src/app-other/: ObstacleDetector.cpp  RouteDetector.cpp  Sensors.hpp  WheelControl.cpp  WheelControl.hpp
src/avr-utils/: BasicSensor.cpp  BasicSensor.hpp  Registers.hpp  USART.cpp  USART.hpp
src/other/: usart.c
